[tool.poetry]
name = "gym-minigrid"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = ">=0.9.6"
numpy = ">=1.15.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^7.27.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
